// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Treeview stateful 1`] = `
Array [
  <input
    class="css-9r3ado"
    id="storybook-explorer-searchfield"
    placeholder="Press \\"/\\" to search..."
  />,
  <div
    class="css-1xlunf8"
  >
    <div
      class="css-0"
    >
      <a
        class="css-h5l8m9"
        href="#!1"
        id="stateful_1"
      >
        <div
          class="css-qayn1"
        >
          <svg
            class="css-16n8bm2"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="css-rap7cq"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Parent A
          </span>
        </div>
      </a>
    </div>
    <div
      class="css-0"
    >
      <a
        class="css-h5l8m9"
        href="#!2"
        id="stateful_2"
      >
        <div
          class="css-qayn1"
        >
          <svg
            class="css-16n8bm2"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="css-rap7cq"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Parent B
          </span>
        </div>
      </a>
    </div>
  </div>,
]
`;

exports[`Storyshots Components|Treeview stateless 1`] = `
<div
  class="css-0"
>
  <a
    class="css-h5l8m9"
    href="#!1"
    id="stateless_1"
  >
    <div
      class="css-qayn1"
    >
      <svg
        class="css-c918ad"
        height="14px"
        viewBox="0 0 1024 1024"
        width="14px"
      >
        <path
          class="css-kqzqgg"
          d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
        />
      </svg>
      <svg
        class="css-rap7cq"
        height="14px"
        viewBox="0 0 1024 1024"
        width="14px"
      >
        <path
          class="css-kqzqgg"
          d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
        />
      </svg>
      <span>
        Parent A
      </span>
    </div>
  </a>
  <div
    class="css-0"
  >
    <a
      class="css-h5l8m9"
      href="#!1-11"
      id="stateless_1-11"
    >
      <div
        class="css-1bewj3h"
        id="1-11"
      >
        <svg
          class="css-1wt88am"
          height="14px"
          viewBox="0 0 1024 1024"
          width="14px"
        >
          <path
            class="css-kqzqgg"
            d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
          />
        </svg>
        Child A1
      </div>
    </a>
    <div
      class="css-0"
    >
      <a
        class="css-h5l8m9"
        href="#!1-12"
        id="stateless_1-12"
      >
        <div
          class="css-1bewj3h"
        >
          <svg
            class="css-16n8bm2"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="css-rap7cq"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Child A2
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Treeview stateless changed expanded 1`] = `
<div
  class="css-0"
>
  <a
    class="css-h5l8m9"
    href="#!1"
    id="stateless_1"
  >
    <div
      class="css-qayn1"
    >
      <svg
        class="css-c918ad"
        height="14px"
        viewBox="0 0 1024 1024"
        width="14px"
      >
        <path
          class="css-kqzqgg"
          d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
        />
      </svg>
      <svg
        class="css-rap7cq"
        height="14px"
        viewBox="0 0 1024 1024"
        width="14px"
      >
        <path
          class="css-kqzqgg"
          d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
        />
      </svg>
      <span>
        Parent A
      </span>
    </div>
  </a>
  <div
    class="css-0"
  >
    <a
      class="css-h5l8m9"
      href="#!1-11"
      id="stateless_1-11"
    >
      <div
        class="css-1bewj3h"
        id="1-11"
      >
        <svg
          class="css-1wt88am"
          height="14px"
          viewBox="0 0 1024 1024"
          width="14px"
        >
          <path
            class="css-kqzqgg"
            d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
          />
        </svg>
        Child A1
      </div>
    </a>
    <div
      class="css-0"
    >
      <a
        class="css-h5l8m9"
        href="#!1-12"
        id="stateless_1-12"
      >
        <div
          class="css-1bewj3h"
        >
          <svg
            class="css-c918ad"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="css-rap7cq"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Child A2
          </span>
        </div>
      </a>
      <div
        class="css-0"
      >
        <a
          class="css-h5l8m9"
          href="#!1-12-121"
          id="stateless_1-12-121"
        >
          <div
            class="css-1jnwzai"
            id="1-12-121"
          >
            <svg
              class="css-1wt88am"
              height="14px"
              viewBox="0 0 1024 1024"
              width="14px"
            >
              <path
                class="css-kqzqgg"
                d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
              />
            </svg>
            GrandChild A1.1
          </div>
        </a>
        <a
          class="css-h5l8m9"
          href="#!1-12-122"
          id="stateless_1-12-122"
        >
          <div
            class="css-1jnwzai"
            id="1-12-122"
          >
            <svg
              class="css-1wt88am"
              height="14px"
              viewBox="0 0 1024 1024"
              width="14px"
            >
              <path
                class="css-kqzqgg"
                d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
              />
            </svg>
            GrandChild A1.2
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Treeview with custom node 1`] = `
Array [
  <input
    class="css-9r3ado"
    id="storybook-explorer-searchfield"
    placeholder="Press \\"/\\" to search..."
  />,
  <div
    class="css-1xlunf8"
  >
    <div
      class="css-0"
    >
      <a
        class="css-h5l8m9"
        href="#!1"
        id="stateful_1"
      >
        <div
          class="css-qayn1"
        >
          <svg
            class="css-16n8bm2"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="css-rap7cq"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Parent A
          </span>
        </div>
      </a>
    </div>
    <div
      class="css-0"
    >
      <a
        class="css-h5l8m9"
        href="#!2"
        id="stateful_2"
      >
        <div
          class="css-qayn1"
        >
          <svg
            class="css-16n8bm2"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="css-rap7cq"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Parent B
          </span>
        </div>
      </a>
    </div>
  </div>,
]
`;

exports[`Storyshots Components|Treeview with roots node 1`] = `
Array [
  <input
    class="css-9r3ado"
    id="storybook-explorer-searchfield"
    placeholder="Press \\"/\\" to search..."
  />,
  <header
    class="css-1nvos36"
  >
    <h1
      class="css-1bs0pwp"
    >
      <span>
        Root 1
      </span>
    </h1>
  </header>,
  <div
    class="css-1xlunf8"
  >
    <div
      class="css-0"
    >
      <a
        class="css-h5l8m9"
        href="#!1-12"
        id="stateful_1-12"
      >
        <div
          class="css-qayn1"
        >
          <svg
            class="css-16n8bm2"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="css-rap7cq"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Child A2
          </span>
        </div>
      </a>
    </div>
  </div>,
  <header
    class="css-1nvos36"
  >
    <h1
      class="css-1bs0pwp"
    >
      <span>
        Root 3
      </span>
    </h1>
  </header>,
  <div
    class="css-1xlunf8"
  >
    <div
      class="css-0"
    >
      <a
        class="css-h5l8m9"
        href="#!3-32"
        id="stateful_3-32"
      >
        <div
          class="css-qayn1"
        >
          <svg
            class="css-16n8bm2"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="css-rap7cq"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Child A2
          </span>
        </div>
      </a>
    </div>
  </div>,
  <header
    class="css-1nvos36"
  >
    <h1
      class="css-1bs0pwp"
    >
      <span>
        Others
      </span>
    </h1>
  </header>,
  <div
    class="css-1xlunf8"
  >
    <div
      class="css-0"
    >
      <a
        class="css-h5l8m9"
        href="#!2"
        id="stateful_2"
      >
        <div
          class="css-qayn1"
        >
          <svg
            class="css-16n8bm2"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="css-rap7cq"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="css-kqzqgg"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Group 1
          </span>
        </div>
      </a>
    </div>
  </div>,
]
`;
